# ytb

./: .gitignore  Cargo.toml  MOBILE_VIDEO_TEST_SUMMARY.md  README.md
.github/workflows/: ci.yml  release.yml
wt-1-tauri-shell/: .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
wt-1-tauri-shell/src/: App.tsx  style.css
wt-1-tauri-shell/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
wt-1-tauri-shell/src-tauri/android-overlay/app/: build.gradle.kts
wt-1-tauri-shell/src-tauri/android-overlay/app/src/main/: AndroidManifest.xml
wt-1-tauri-shell/src-tauri/android-overlay/app/src/main/kotlin/com/afstudy20/ytb/: PlaybackPlugin.kt  PlaybackService.kt  VideoPlayerHelper.kt
wt-1-tauri-shell/src-tauri/capabilities/: default.json
wt-1-tauri-shell/src-tauri/icons/: icon.icns
wt-1-tauri-shell/src-tauri/src/: innertube_bridge.rs  innertube_plugin.rs  lib.rs  main.rs  stream_proxy.rs  video_player.rs
wt-2-ui/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
wt-2-ui/src/: App.tsx  index.css  vite-env.d.ts
wt-2-ui/src/components/: Avatar.tsx  BottomNav.tsx  ChannelCard.tsx  CommentsList.tsx  EmptyState.tsx  Layout.tsx  MiniPlayer.tsx  PlaylistCard.tsx  PullToRefresh.tsx  QualitySpeedMenu.tsx  RelatedVideos.tsx  ScrubBar.tsx  Skeleton.tsx  ThemeProvider.tsx  TopBar.tsx  VideoCard.tsx  VideoPlayer.tsx
wt-2-ui/src/hooks/: useInitStores.ts
wt-2-ui/src/lib/: api.ts  format.ts  mockClient.ts  nativeVideo.ts  tauriClient.ts  types.ts
wt-2-ui/src/routes/: Downloads.tsx  History.tsx  Home.tsx  Library.tsx  Liked.tsx  Playlists.tsx  Search.tsx  Settings.tsx  Watch.tsx
wt-2-ui/src/stores/: downloads.ts  history.ts  likes.ts  player.ts  playlists.ts  settings.ts
wt-3-innertube/: Cargo.toml
wt-3-innertube/src/: channel.rs  client.rs  continuation.rs  error.rs  json_util.rs  lib.rs  piped.rs  playlist.rs  search.rs  video.rs
wt-3-innertube/src/js_interp/: cipher.rs  interp.rs  lexer.rs  mod.rs  ops.rs  value.rs
wt-3-innertube/src/streams/: cache.rs  extractor.rs  format.rs  mod.rs  orchestrator.rs  url_util.rs
wt-3-innertube/src/types/: channel.rs  mod.rs  playlist.rs  search.rs  stream.rs  video.rs
wt-3-innertube/tests/: cipher.rs  parsing.rs
wt-3-innertube/tests/fixtures/: base_js_sample_a.js  base_js_sample_b.js  next_dQw4w9WgXcQ.json  player_dQw4w9WgXcQ.json  search_lofi.json
wt-4-downloader/: Cargo.toml  README.md
wt-4-downloader/src/: config.rs  error.rs  events.rs  job.rs  lib.rs  queue.rs  segment.rs  storage.rs  types.rs
wt-4-downloader/src/mux/: binary.rs  libav.rs  mod.rs
wt-4-downloader/tests/: mux.rs  persistence.rs  segment.rs
wt-5-extras/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
wt-5-extras/crates/ryd/: Cargo.toml  README.md
wt-5-extras/crates/ryd/src/: cache.rs  client.rs  error.rs  lib.rs  model.rs
wt-5-extras/crates/ryd/tests/: ryd.rs
wt-5-extras/crates/ryd/tests/fixtures/: votes.json
wt-5-extras/crates/sponsorblock/: Cargo.toml  README.md
wt-5-extras/crates/sponsorblock/src/: client.rs  error.rs  http.rs  lib.rs  model.rs
wt-5-extras/crates/sponsorblock/tests/: sponsorblock.rs
wt-5-extras/crates/sponsorblock/tests/fixtures/: direct_segments.json  hash_bucket.json
wt-6-backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md
wt-6-backend/src/: main.rs
