[package]
name = "wt-3-innertube"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A self-contained Rust client for YouTube's private InnerTube API with cipher/n-sig deciphering and Piped fallback."
license = "MIT"
repository = "https://example.com/wt-3-innertube"
keywords = ["youtube", "innertube", "video", "streaming", "api"]
categories = ["api-bindings", "multimedia::video"]
exclude = ["tests/fixtures/*.json", "tests/fixtures/*.js"]

[lib]
name = "innertube"
path = "src/lib.rs"

[features]
default = []
# Enable to compile the `#[ignore]`'d live-integration tests target (they still
# won't run unless explicitly invoked with `cargo test -- --ignored`).
live-tests = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode"] }
thiserror = "1"
tracing = "0.1"
once_cell = "1"

[dev-dependencies]
mockito = "1"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
