[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[features]
default = []
bundled-ffmpeg = []
libav = ["dep:ffmpeg-next"]

[dependencies]
futures = "0.3"
mp4ameta = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
ffmpeg-next = { version = "7", optional = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
