[workspace]
resolver = "2"
members = ["crates/sponsorblock", "crates/ryd"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
repository = "https://github.com/example/wt-5-extras"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
wiremock = "0.6"

[profile.dev]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
