[package]
name = "wt-6-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Small HTTP API that adapts wt-3-innertube to the web UI contract."
license = "MIT"

[dependencies]
axum = "0.7"
innertube = { path = "../wt-3-innertube", package = "wt-3-innertube" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
