[package]
name = "ytb-shell"
version = "0.1.0"
description = "Tauri shell for Android media playback"
authors = ["ytb-shell"]
edition = "2021"

[lib]
name = "ytb_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.3", features = [] }
innertube = { package = "wt-3-innertube", path = "../../wt-3-innertube" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
urlencoding = "2.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
jni = "0.21"
ndk-context = "0.1"
