[package]
name = "ytb-shell"
version = "0.1.0"
description = "Tauri shell for Android media playback"
authors = ["ytb-shell"]
edition = "2021"

[lib]
name = "ytb_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.3", features = [] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
once_cell = "1"
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode"] }
thiserror = "1"
tracing = "0.1"
innertube = { version = "0.1", path = "../../wt-3-innertube" }