[package]
name = "sponsorblock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Async client for the SponsorBlock API (https://sponsor.ajay.app)"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
